back-add: cadastrar fichas e execuções